--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
       # ref: feat/migrate-3-29
       ref: chore/temp-migrate-3-29
   flutter_launcher_icons: ^0.14.3
+  firebase_core: ^3.12.0
 
 dev_dependencies:
   flutter_test:
