--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,11 +20,18 @@ dependencies:
   firebase_core: ^3.12.0
   firebase_ui_auth: ^1.16.1
   firebase_auth: ^5.5.0
+  go_router: ^14.8.1
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  riverpod_generator: ^2.6.4
+  build_runner: ^2.4.15
+  custom_lint: ^0.7.3
+  riverpod_lint: ^2.6.4
 
 flutter:
   uses-material-design: true
